--- a/style/assignment.css
+++ b/style/assignment.css
@@ -19,6 +19,10 @@
     
     
 }
+/*header*/
+.header{
+    background-image: url('../Assets/Hero-bg.png');
+}
 
 /*share style*/
 .text-primary{
@@ -51,9 +55,15 @@ nav ul li {
     display: flex;
     justify-content: space-around;
     gap: 35px;
+    align-items: center;
 }
 .banner-greetings{
     font-size: 25px;
     color: #252432;
     
+}
+img{
+    border-radius: 48px;
+    margin-top: 20px;
+
 }
