--- a/style/assignment.css
+++ b/style/assignment.css
@@ -1,5 +1,8 @@
 
-
+body{
+    width: 1200px;
+    margin: 0 auto;
+}
 
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
@@ -18,6 +21,10 @@
     padding: 5px 5px;
     
     
+}
+.btn-primary:hover{
+    background-color: yellow;
+    scale: 1.2;
 }
 
 
@@ -70,32 +77,94 @@ img{
     margin-top: 20px;
 
 }
-
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin: 130px;
+    margin-bottom: 130px;
+}
 /*section style*/
 
 .section-title{
-    font-size: 38px;
+    font-size: 50px;
     font-weight: bold;
+    align-items: center;
 }
 .about{
     
     padding: 130px 150px;
     margin: 130px;
     text-align: center;
+    background-color: aquamarine;
     
 }
 .about-item{
     font-weight: bold;
-    font-size: 60px;
+    font-size: 18px;
 
 }
-.item-description{
-    font-size: 20px;
-    font-weight: bold;
+.item_description{
+    font-size: 14px;
+    font-weight: normal;
+    color: black;
 }
 
 .about-items{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     color: #4E47FF;
+    gap: 50px;
+    
+.knowledge-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.knowledge{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px;
+    align-items: center;
+}
+.card{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
+.contact{
+    
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+.section-column{
+    width: 50%;
+}
+section input[type="tex"]{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    padding: 10px 20px;
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.footer{
+    text-align: center;
+}
+.footer nav{
+    text-align: none;
+}
+.footer-button{
+    margin: 30px 0;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
 }
